# tessdoc

./: APIExample-user_patterns.md  APIExample.md  Common-Errors-and-Resolutions.md  Data-Files-in-different-versions.md  ImproveQuality.md  Planning.md  ReleaseNotes.md  TesseractOpenCL.md  ViewerDebugging.md
examples/: Basic_example.cc  CMakeLists.txt  C_API_example.c  ChoicesIterator_example.cc  GetComponentImages_example.cc  HOCR_altsym_example.cc  LSTM_Choices_example.cc  OSD_alt_example.cc  OSD_example.cc  OpenCV_example.cc  ResultIterator_example.cc  SetRectangle_example.cc  UserPatterns_example.cc  monitoring_example.cc  monolithic_examples.h  my.patterns.config  my.user.patterns  searchable_PDF_example.cc
tess4/: 4.0-Accuracy-and-Performance.md  The-Hallucination-Effect.md
